# resume_extractor

./: .gitignore  main.py  pyproject.toml
src/: extract_skills.py  parser.py  precompute.py  test.py  translator.py
